ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: medical-clinic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clinic-service
                port:
                  number: 8080
